// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dsl dsl.match.default 1`] = `
"function Test(value: number) {
  if (value === 1) {
    console.log(1);
  } else {
    console.log(2);
  }
}"
`;

exports[`dsl dsl.match.enum 1`] = `
"function Test(value: Event) {
  if (value === Event.EventA) {
    console.log(1);
  } else if (value === Event.EventB) {
    console.log(\\"a\\");
  }
}"
`;

exports[`dsl dsl.match.number 1`] = `
"function Test(value: number) {
  if (value === 1) {
    console.log(1);
  } else if (value === 2) {
    console.log(2);
  } else if (value === 3) {
    console.log(3);
  }
}"
`;

exports[`dsl dsl.match.string 1`] = `
"function Test(value: string) {
  if (value === \\"a\\") {
    console.log(\\"a\\");
  } else if (value === \\"b\\") {
    console.log(\\"b\\");
  }
}"
`;
